# adiar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  annotated.html  bdd_2bdd_8h_source.html  bdd_8h_source.html  bool__op_8h_source.html  builder_8h_source.html  classadiar_1_1____bdd-members.html  classadiar_1_1____bdd.html  classadiar_1_1____bdd.js  classadiar_1_1____zdd-members.html  classadiar_1_1____zdd.html  classadiar_1_1____zdd.js  classadiar_1_1bdd-members.html  classadiar_1_1bdd.html  classadiar_1_1bdd.js  classadiar_1_1builder-members.html  classadiar_1_1builder.html  classadiar_1_1builder__ptr.html  classadiar_1_1exec__policy-members.html  classadiar_1_1exec__policy.html  classadiar_1_1exec__policy.js  classadiar_1_1exec__policy_1_1quantify.html  classadiar_1_1exec__policy_1_1quantify.js  classadiar_1_1exec__policy_1_1quantify_1_1transposition__growth.html  classadiar_1_1exec__policy_1_1quantify_1_1transposition__max.html  classadiar_1_1internal_1_1____dd-members.html  classadiar_1_1internal_1_1____dd.html  classadiar_1_1internal_1_1____dd.js  classadiar_1_1internal_1_1dd-members.html  classadiar_1_1internal_1_1dd.html  classadiar_1_1internal_1_1dd.js  classadiar_1_1zdd-members.html  classadiar_1_1zdd.html  classadiar_1_1zdd.js  classes.html  dd_8h_source.html  domain_8h_source.html  (+120 more)
examples/: CMakeLists.txt  README.md  basic.cpp  builder.cpp  examples_common.cpp  functional.cpp  queens.cpp
tests/: CMakeLists.txt  all.cpp  test.h
tests/adiar/: CMakeLists.txt  exec_policy.test.cpp  functional.test.cpp
tests/adiar/bdd/: CMakeLists.txt  apply.test.cpp  bdd.test.cpp  (+11 more)
(+174 files in other folders)
